# QDM

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
extension/chrome/: background.js  content.js  inject.js  manifest.json  popup.html  popup.js
extension/firefox/: manifest.json
scripts/: fetch-yt-dlp.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: browser_monitor.rs  clipboard_monitor.rs  download_engine.rs  hls_engine.rs  lib.rs  queue_manager.rs  tools.rs  types.rs  yt_dlp.rs
src/components/: AboutDialog.tsx  AuthDialog.tsx  DownloadList.tsx  LinkExpiredDialog.tsx  NewDownloadDialog.tsx  SettingsDialog.tsx  Sidebar.tsx  TitleBar.tsx  Toolbar.tsx  VideoGrabber.tsx  VideoQualityDialog.tsx  YtdlpLogPanel.tsx
src/store/: useDownloadStore.ts
