[package]
name = "qdm"
version = "1.0.3"
description = "Quantum Download Manager"
authors = ["Parveen Bhadoo"]
license = "MIT"
repository = "https://github.com/PBhadoo/QDM"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
axum = { version = "0.7", features = ["json", "ws"] }
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
url = "2"
urlencoding = "2"
dirs = "5"
arboard = { version = "3", default-features = false, features = ["image-data"] }
m3u8-rs = "6"
roxmltree = "0.19"
which = "6"
zip = { version = "2", default-features = false, features = ["deflate-zlib"] }
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
hex = "0.4"
base64 = "0.22"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
